--- a/main.html
+++ b/main.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
+	  <style>
+		table, td {
+			border: 1px solid black;
+			padding:20px;
+			border-spacing:5px;
+		}
+	</style>
   </head>
+	
+	
   <body>
+	  
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+			
+		
+		
     </table>
   </body>
 </html>
